# DnsSafeguard

./: .gitignore  .goreleaser.yaml  Cargo.toml  DNS.md  DOHSERVER.md  FRAG.md  OVERWRITE.md  README.md  RULES.md  Release notes.txt  config.json  public dns.txt  rustfmt.toml
.github/workflows/: release.yml  release_arm64.yml
dns/: dns1  dns2  dns4  dns5  dns6  dns7  dns8
src/: chttp.rs  config.rs  disconnected.rs  dohserver.rs  fragment.rs  h11.rs  interface.rs  ioutils.rs  ipoverwrite.rs  keepalive.rs  main.rs  multi.rs  pipe.rs  race.rs  rule.rs  tls.rs  udp.rs  utils.rs  win.rs
src/doh2/: h2tls.rs  mod.rs
src/doh3/: mod.rs  noise.rs  qtls.rs  transporter.rs
src/dohserver/: h11p.rs  h2p.rs  mod.rs
src/doq/: mod.rs
src/dot/: blocking.rs  mod.rs  nonblocking.rs
tests/: localdoh.rs
