[package]
name = "DnsSafeguard"
version = "1.10.0"
edition = "2024"
license = "Apache-2.0"
description = "DnsSafeguard is dedicated to providing a secure DNS client solution, ensuring your DNS queries remain private and uncensored."
homepage = "https://github.com/radioactiveAHM/DnsSafeguard"
repository = "https://github.com/radioactiveAHM/DnsSafeguard"
authors = ["Your Name djahmadfire@gmail.com"]
keywords = ["dns", "privacy", "secure-client"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[dependencies]
webpki-roots = "1.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
rand = "0.9.2"
quinn = { version = "0.11.9", default-features = false, features = ["rustls-ring", "runtime-tokio", "platform-verifier"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net", "macros"] }
h3-quinn = "0.0.10"
h3 = "0.0.8"
http = "1.3.1"
bytes = "1.10.1"
base64-url = "3.0.0"
h2 = "0.4.12"
tokio-rustls = { git = "https://github.com/radioactiveAHM/tokio-rustls.git", default-features = false, features = ["ring", "tls12"] }
socket2 = "0.6.0"
local-ip-address = "0.6.5"
libc = "0.2.175"
native-tls = {version = "0.2.14", features = ["alpn", "vendored"]}
tokio-native-tls = "0.3.1"
log = "0.4.27"
env_logger = "0.11.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
