[package]
name = "DnsSafeguard"
version = "1.13.5"
edition = "2024"
license = "Apache-2.0"
description = "DnsSafeguard is dedicated to providing a secure DNS client solution, ensuring your DNS queries remain private and uncensored."
homepage = "https://github.com/radioactiveAHM/DnsSafeguard"
repository = "https://github.com/radioactiveAHM/DnsSafeguard"
authors = ["djahmadfire@gmail.com"]
keywords = ["dns", "privacy", "secure-client"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[dependencies]
webpki-roots = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "bloom"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "rt", "macros", "net", "time"] }
h3-quinn = "0.0.10"
h3 = "0.0.8"
http = "1.4.0"
bytes = "1.11.1"
base64-url = "3.0.2"
h2 = "0.4.13"
tokio-rustls = { git = "https://github.com/radioactiveAHM/tokio-rustls.git", features = ["brotli", "zlib", "logging"] }
socket2 = "0.6.2"
native-tls = { version = "0.2.15", features = ["alpn", "vendored"]}
tokio-native-tls = { version = "0.3.1"}
log = "0.4.29"
env_logger = "0.11.9"
fastbloom = "0.15.0" # required for quinn
if-addrs = "0.15.0"
boring = "5.0.1"
tokio-boring = "5.0.0"

[target.'cfg(windows)'.dependencies]
windows-service = "0.8.0"

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["quinn/rustls-aws-lc-rs", "tokio-rustls/aws-lc-rs", "tokio-rustls/prefer-post-quantum"]
ring = ["quinn/rustls-ring", "tokio-rustls/ring"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
